--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,4 +1,5 @@
-<div fxLayout="row" fxLayoutAlign="center center">
+<div fxLayout="column" fxLayoutAlign="center center">
+  <app-orderheader></app-orderheader>
   <mat-card fxFlex="50">
 	<div fxLayout="column">
 		<div fxFlex="30" class="action-blurb">This is a blurb.</div>
