inserita card lavorazioni

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,8 @@
 <div fxLayout="column" fxLayoutAlign="center center">
   <app-orderheader></app-orderheader>
+  <div fxLayout="row" id="mainPane">
+    <app-lavorazioni></app-lavorazioni>
+  </div>
   <mat-card fxFlex="50">
 	<div fxLayout="column">
 		<div fxFlex="30" class="action-blurb">This is a blurb.</div>
